force-app/main/default/objects/GPS_Log__c/GPS_Log__c.object-meta.xml
<CustomObject>
    <label>GPS Log</label>
    <pluralLabel>GPS Logs</pluralLabel>
    <nameField>
        <label>GPS Log Number</label>
        <type>AutoNumber</type>
        <displayFormat>GPS-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>GPS breadcrumb tracking for field salesperson location monitoring and route verification (MOD-03 Daily Field Operations)</description>
</CustomObject>