force-app/main/default/objects/GPS_Log__c/fields/Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Accuracy__c</fullName>
    <label>Accuracy</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>