force-app/main/default/objects/GPS_Log__c/fields/Battery_Level__c.field-meta.xml
<CustomField>
    <fullName>Battery_Level__c</fullName>
    <label>Battery Level</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>