force-app/main/default/objects/GPS_Log__c/fields/Captured_At__c.field-meta.xml
<CustomField>
    <fullName>Captured_At__c</fullName>
    <label>Captured At</label>
    <type>DateTime</type>
</CustomField>