force-app/main/default/objects/GPS_Log__c/fields/Device_Info__c.field-meta.xml
<CustomField>
    <fullName>Device_Info__c</fullName>
    <label>Device Info</label>
    <type>Text</type>
    <length>255</length>
    <description>Device information at GPS capture time</description>
</CustomField>