force-app/main/default/objects/GPS_Log__c/fields/Is_Offline_Captured__c.field-meta.xml
<CustomField>
    <fullName>Is_Offline_Captured__c</fullName>
    <label>Is Offline Captured</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>