force-app/main/default/objects/GPS_Log__c/fields/Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Type__c</fullName>
    <label>Log Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day_Start</fullName>
                <label>Day Start</label>
            </value>
            <value>
                <fullName>Day_End</fullName>
                <label>Day End</label>
            </value>
            <value>
                <fullName>Visit_CheckIn</fullName>
                <label>Visit Check-In</label>
            </value>
            <value>
                <fullName>Visit_CheckOut</fullName>
                <label>Visit Check-Out</label>
            </value>
            <value>
                <fullName>Breadcrumb</fullName>
                <default>true</default>
                <label>Breadcrumb</label>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of GPS log entry for categorization and reporting</description>
</CustomField>