force-app/main/default/objects/GPS_Log__c/fields/Network_Status__c.field-meta.xml
<CustomField>
    <fullName>Network_Status__c</fullName>
    <label>Network Status</label>
    <type>Text</type>
    <length>20</length>
    <description>Network connectivity status when GPS was captured (Online/Offline)</description>
</CustomField>