force-app/main/default/objects/GPS_Log__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <label>Salesperson</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>GPS Logs</relationshipLabel>
    <relationshipName>GPS_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>