force-app/main/default/objects/GPS_Log__c/fields/Synced_At__c.field-meta.xml
<CustomField>
    <fullName>Synced_At__c</fullName>
    <label>Synced At</label>
    <type>DateTime</type>
</CustomField>