force-app/main/default/objects/GPS_Log__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <label>Visit</label>
    <type>Lookup</type>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>GPS Logs</relationshipLabel>
    <relationshipName>GPS_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to specific visit for visit-level GPS tracking</description>
</CustomField>